--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
+    "json-server": "^1.0.0-alpha.23",
     "loki": "^0.28.1",
     "mini-css-extract-plugin": "^2.5.3",
     "prettier": "3.2.5",
